# rand_obj_picking

./: .gitmodules  CMakeLists.txt  README.md  clutter_clearing2.cc
cfg/: calibration_joints.txt  camera_extrinsic_nautilus  camera_extrinsic_squid  grasp_params
cfg/q_waypoints/: input_traj_deg  input_tray_deg  staging_deg
models/pcd/: cup2_down.pcd
src/: .CMakeLists.txt.swp  CMakeLists.txt  clutter_clearing2.cc  gen_calib_img.cc  test_cluster.cc  test_cup_flip.cc  test_fit.cc  test_fork.cc  test_grasp.cc  test_img.cc  test_plate.cc  test_robot_bridge.cc  test_scan.cc  util.cc  util.h
