cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(rand_obj_picking)

set(drake_DIR "$ENV{HOME}/drake_bazel_build/lib/cmake/drake")

include(ExternalProject)

find_package(PCL REQUIRED)
find_package(OpenCV 2.4 REQUIRED)
find_package(drake CONFIG REQUIRED)
#find_package(realsense)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_FLAGS "-g -O2 -Wall ${CMAKE_CXX_FLAGS}")
#set(CMAKE_CXX_COMPILER "/usr/bin/clang++-4.0")

ExternalProject_Add(robot_bridge_proj
  SOURCE_DIR ${PROJECT_SOURCE_DIR}/robot_bridge
  CMAKE_ARGS
  -DCMAKE_INSTALL_PREFIX=${PROJECT_SOURCE_DIR}/build
  -Ddrake_DIR=${drake_DIR}
  -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
  -DCMAKE_CXX_STANDARD_REQUIRED=${CMAKE_CXX_STANDARD_REQUIRED}
  -DCMAKE_POSITION_INDEPENDENT_CODE=${CMAKE_POSITION_INDEPENDENT_CODE}
  #-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS})

ExternalProject_Add(rgbd_bridge_proj
  SOURCE_DIR ${PROJECT_SOURCE_DIR}/rgbd_bridge
  CMAKE_ARGS
  -DCMAKE_INSTALL_PREFIX=${PROJECT_SOURCE_DIR}/build
  -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
  -DCMAKE_CXX_STANDARD_REQUIRED=${CMAKE_CXX_STANDARD_REQUIRED}
  -DCMAKE_POSITION_INDEPENDENT_CODE=${CMAKE_POSITION_INDEPENDENT_CODE}
  #-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS})

ExternalProject_Add(perception_proj
  SOURCE_DIR ${PROJECT_SOURCE_DIR}/perception
  CMAKE_ARGS
  -DCMAKE_INSTALL_PREFIX=${PROJECT_SOURCE_DIR}/build
  -Ddrake_DIR=${drake_DIR}
  -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
  -DCMAKE_CXX_STANDARD_REQUIRED=${CMAKE_CXX_STANDARD_REQUIRED}
  -DCMAKE_POSITION_INDEPENDENT_CODE=${CMAKE_POSITION_INDEPENDENT_CODE}
  #-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS})

ExternalProject_Add(grasp_gen_proj
  SOURCE_DIR ${PROJECT_SOURCE_DIR}/grasp_gen
  CMAKE_ARGS
  -DCMAKE_INSTALL_PREFIX=${PROJECT_SOURCE_DIR}/build
  -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
  -DCMAKE_CXX_STANDARD_REQUIRED=${CMAKE_CXX_STANDARD_REQUIRED}
  -DCMAKE_POSITION_INDEPENDENT_CODE=${CMAKE_POSITION_INDEPENDENT_CODE}
  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS})

ExternalProject_Add(clutter_proj
  SOURCE_DIR ${PROJECT_SOURCE_DIR}/src
  DEPENDS robot_bridge_proj rgbd_bridge_proj perception_proj grasp_gen_proj
  CMAKE_ARGS
  -DCMAKE_INSTALL_PREFIX=${PROJECT_SOURCE_DIR}/build
  -Ddrake_DIR=${drake_DIR}
  -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
  -DCMAKE_CXX_STANDARD_REQUIRED=${CMAKE_CXX_STANDARD_REQUIRED}
  -DCMAKE_POSITION_INDEPENDENT_CODE=${CMAKE_POSITION_INDEPENDENT_CODE}
  #-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS})
